<?xml version="1.0"?>
<?xml-model
        href="http://download.ros.org/schema/package_format3.xsd"
        schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open3d_conversions</name>
  <version>0.0.1</version>
  <description>Conversions between ROS types and Open3D point clouds</description>

  <author email="esposito@imfusion.com">Marco Esposito</author>
  <maintainer email="esposito@imfusion.com">Marco Esposito</maintainer>

  <license>LGPLv2</license>

  <exec_depend>rospy</exec_depend>
  <exec_depend>ros_numpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
